# ROS2_usbcapture

UsbCaptureROS4/: README.MD
UsbCaptureROS4/install/: local_setup.sh  setup.sh
UsbCaptureROS4/install/common/share/common/: local_setup.dsv  package.dsv  package.ps1  package.sh  package.xml
UsbCaptureROS4/install/common/share/common/cmake/: ament_cmake_export_targets-extras.cmake  commonExport.cmake
UsbCaptureROS4/install/interfaces/include/interfaces/msg/: mat_with_time.h
UsbCaptureROS4/install/interfaces/include/interfaces/msg/detail/: mat_with_time__functions.c  mat_with_time__rosidl_typesupport_fastrtps_cpp.hpp  mat_with_time__rosidl_typesupport_introspection_c.h  mat_with_time__struct.hpp  mat_with_time__traits.hpp  mat_with_time__type_support.h
UsbCaptureROS4/install/interfaces/share/ament_index/resource_index/rosidl_interfaces/: interfaces
UsbCaptureROS4/install/interfaces/share/interfaces/: local_setup.sh  package.sh
UsbCaptureROS4/install/ros2_usbcapture/share/ament_index/resource_index/package_run_dependencies/: ros2_usbcapture
UsbCaptureROS4/install/ros2_usbcapture/share/ament_index/resource_index/parent_prefix_path/: ros2_usbcapture
UsbCaptureROS4/install/ros2_usbcapture/share/ros2_usbcapture/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
UsbCaptureROS4/log/: latest_build
UsbCaptureROS4/src/common/: CMakeLists.txt
UsbCaptureROS4/src/common/include/common/: common.h
UsbCaptureROS4/src/common/src/: common.cpp
UsbCaptureROS4/src/interfaces/: CMakeLists.txt
UsbCaptureROS4/src/interfaces/msg/: MatWithTime.msg
UsbCaptureROS4/src/ros2_usbcapture/: CMakeLists.txt  UsbCapture.yaml
UsbCaptureROS4/src/ros2_usbcapture/include/ros2_usbcapture/: RosNode.h  UsbCaptureSystem.h  test_get_image.h
UsbCaptureROS4/src/ros2_usbcapture/launch/: image.launch.py
UsbCaptureROS4/src/ros2_usbcapture/src/: RosNode.cpp  UsbCaptureSystem.cpp  test_get_image.cpp
